# AiShortsV2

./: .env.example  .gitignore  ANALISE_DUPLICACAO_ESTRUTURAL.md  CLAUDE.md  GEMINI.md  LISTA_ARQUIVOS_DEMO_FASE1.md  PLANO_ACAO_IMEDIATA.md  PLANO_CONSOLIDACAO_RAIZ.md  README.md  README_DEMO_PIPELINE_SIMPLES.md  README_FINAL_COMPOSER.md  README_processamento_video_automatico.md  RELATORIO_ESTRATEGICO_MODELO_INVENTOR.md  RELATORIO_FASE1_FINAL.md  RELATORIO_IMPLEMENTACAO_ANALISE_SEMANTICA.md  RELATORIO_IMPLEMENTACAO_CLIP_SCORING.md  REVISAO_CODEBASE_COMPLETA.md  check_fix.py  cli_refactored.py  demo_clip_scoring.py  demo_processamento_video_automatico.py  demo_result_tiktok.json  demo_tts_simple.py  demo_video_module.py  final_demo_report.json  main.py  monitor_dashboard.py  pyproject.toml  report_record.txt  requirements.txt  requirements_video.txt  run_tests.py  setup.py  supplementary_video_test.py  test_youtube_extractor_fix.py  tts_demo.py  workspace.json
.memory/: todo_meta.json  url_source_meta.json
aishorts_v2/: DUPLICOES_RESOLVIDAS.md  IMPLEMENTACAO_CONCLUIDA.md  README.md  __init__.py  demo_analise_semantica.py  demo_analise_semantica_simples.py  demo_simulated_themes.py  demo_theme_generator.py  demo_video_platforms.py  demo_youtube_extraction.py  main_demo.py  requirements.txt  run_tests.py  test_matching_final.py  test_matching_simple.py  test_openrouter.py  test_structure.py  test_theme_generator.py
archive_aishorts_v2_20251104_082803/: LIMPEZA_CODEBASE.md  README.md  requirements.txt
backup_cleanup/: requirements_sync.txt
config/: __init__.py  (+1 more)
(+253 files in other folders)
