[project]
name = "aishorts-v2"
version = "2.0.0"
description = "Automated pipeline for generating viral short videos"
requires-python = ">=3.9"

dependencies = [
 # Core dependencies
 "pydantic>=2.10.6",
 "pydantic-settings>=2.11.0",
 "python-dotenv>=1.2.1",
 "httpx>=0.28.1",
 "loguru>=0.7.3",
 
 # AI/ML dependencies
 "torch>=2.2.0",
 "transformers>=4.30.0",
 "opencv-python>=4.9.0.80",
 "librosa>=0.10.2",
 "soundfile>=0.12.1",
 "numpy>=1.26.4",
 "scipy>=1.12.0",
 "scikit-learn>=1.4.0",
 
 # Video processing
 "moviepy>=2.2.1",
 "yt-dlp>=2025.10.22",
 "pillow>=10.2.0",
 "imagehash>=4.3.0",
 
 # TTS (Kokoro)
 "kokoro-onnx>=0.1.0",
 
 # NLP
 "spacy>=3.8.7",
 
 # System utilities
 "psutil>=5.9.0",
 
 # Development tools (optional-dependencies)
]

[project.optional-dependencies]
dev = [
 "pytest>=7.0.0",
 "pytest-asyncio>=0.21.0",
 "pytest-cov>=4.0.0",
 "black>=23.0.0",
 "mypy>=1.16.1",
 "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I", "W", "N", "UP"]
ignore = ["E501", "W503"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
